[project]
name = "massband"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.6.1",
    "laufband>=0.1.3",
    "lazy-loader>=0.4",
    "matplotlib>=3.10.3",
    "pint>=0.24.4",
    "znh5md>=0.4.6",
    "zntrack>=0.8.7",
]
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "zndraw>=0.5.10",
]

[tool.uv.sources]
znh5md = { git = "https://github.com/zincware/znh5md" }
